# PCFS

./: .gitignore  Makefile  Makefile.am  PCFS.c  README.md  autogen.sh  background_compress.c  background_compress.h  compress.c  compress.h  compress_RW.h  compress_W.c  compress_gz.c  compress_null.c  compressor.c  config.h  configure.ac  core_R.c  core_W.c  debug.c  debug.h  direct_compress.c  direct_compress.h  file.c  file.h  globals.c  globals.h  gzCompress.c  list.h  log.c  log.h  noCompress.c  noCompress.h  pcfs.c  simpleFuse_v1.c  simpleFuse_v2.c  structs.h
example/: Fuse_1_ls.c  Fuse_4_CntBuf.c  Fuse_5_CrtDir.c  Fuse_6_FileHdl.c  ReadSimple.md  list.h  simpleFuse_v1.c  simpleFuse_v2.c  simpleFuse_v3.c  simpleFuse_v4.c  testZlib.c  useZlib.c  wholeFile4K.c  zpipe.c
module_try/: compress_R.c  compress_RW.h  compress_W.c  main.c
previous/: PCFS.c  compressor.c  compressor.h  file.h  gzCompress.c  log.c  log.h  noCompress.c
tools/: fsck.c  offline.c
